...
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/color_fragment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/color_fragment_title_hint"
        android:textSize="@dimen/color_fragment_title_font_size"/>

    <EditText
        android:id="@+id/color_fragment_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/color_fragment_description_hint"
        android:textSize="@dimen/color_fragment_description_font_size"/>

    <LinearLayout
...
