...
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:indeterminate="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/notes_list_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/notes_list_fab"
...
